[gd_scene load_steps=2 format=3 uid="uid://bfvtfqii1ytgf"]

[ext_resource type="Script" uid="uid://dy6si7stf21j6" path="res://scenes/viewfinder/viewfinder_system.gd" id="1_vfs"]

[node name="ViewfinderSystem" type="Node2D" groups=["viewfinder_system"]]
script = ExtResource("1_vfs")

[node name="ViewfinderUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ViewfinderUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="ViewfinderUI/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ViewfinderUI/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BtnInteract" type="Button" parent="ViewfinderUI/Control/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "交互模式 (1)"

[node name="BtnSelect" type="Button" parent="ViewfinderUI/Control/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "选取模式 (2)"

[node name="BtnMove" type="Button" parent="ViewfinderUI/Control/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "移动覆盖 (3)"

[node name="LabelStatus" type="Label" parent="ViewfinderUI/Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -17.0
grow_horizontal = 2
text = "当前模式: 交互 (可以使用方向键移动)"
horizontal_alignment = 1
vertical_alignment = 1
